# flame

./: .gitignore  Flame.cabal  Flame.fst  Flame.hs  Flame_FLAM.fst  Flame_IFC.fst  Makefile  TODO.txt  flame.cabal  stack.yaml
examples/: Auth.hs  Commitment.hs  Password.hs  Password2.hs  PasswordEx.hs  ServantAuth.hs  ServantClient.hs  ServantJS.hs
examples/blog/: Application.hs  Flame.hs  Main.hs  blog.cabal
examples/blog/Blog/: Common.hs
examples/html/: index.html
examples/mobile/: DynLoad.hs  EvalServer.hs
examples/password/: IFCMain.hs  password.cabal
examples/password/src/: IFCMain.hs  Main.hs
examples/servant/: MemoDBClient.hs  MemoDBMacAuthServer.hs  MemoDBServer.hs
examples/servant/html/: .gitignore
flame-plugin/: flame-plugin.cabal  stack.yaml
flame-plugin/src/Flame/: Principals.hs
flame-runtime/: flame-runtime.cabal  stack.yaml
flame-runtime/playground/bookseller-1-simple/: Main  Main.hs
playground/: EDSL_Compilation.lhs  Main.hs  Scratch.hs
playground/Flame/EDSL/: CMD.hs  Frontend.hs  IFC.hs
src/: Flame.hs
src/Control/: RLMonad.hs
src/Flame/: Assert.hs  Core.hs  Do.hs  IFC.hs  IFCRef.hs  IO.hs  NMIFCRef.hs  NMIO.hs  NMPrelude.hs  NMTime.hs  Normalise.hs  Normalize.hs  Prelude.hs  Principals.hs  Solver.hs  Time.hs  saveIFC.hs
tests/: Auth.hs  Commitment.hs  Dist.hs  Leak.hs  Password.hs  SpeaksFor.hs  Test  Test.hs  TestAFEvidence.hs  TestDo.hs  TestNMIFC.hs
testsuite/driver/: testlib.py
testsuite/mk/: test.mk
testsuite/scratch/: Dist.hs  Launch.hs  TestDo.hs  TestMe.hs  TestNMIFC.hs  TestNormPrinTypePattern.hs  Trans.hs
(+57 files in other folders)
