name:                Blog
version:             0.0.0.0
--author:              YOUR NAME
--maintainer:          your@email.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable blog
  main-is: Main.hs
  ghc-options: -threaded -O2
  build-depends:
    base
    , aeson
    , bytestring
    , simple >= 0.8.0
    , simple-templates >= 0.8.0
    , text
    , transformers
    , wai
    , wai-extra
    , warp

